Changes:   ✅ Fixed pyproject.toml - Added include = ["browsers/py.typed"] to Poetry config   ✅ Fixed py.typed location - Moved to browsers/py.typed

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ repository = "https://github.com/roniemartinez/browsers"
 packages = [
     { include = "browsers" },
 ]
+include = ["browsers/py.typed"]
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "^2.3.1"
